backend/K8/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: d3akhtar/authservice
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
  - name: authservice
    protocol: TCP
    port: 8080
    targetPort: 8080
