backend/K8/counterRangeRpcServer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counterrangerpcserver-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counterrangerpcserverservice
  template:
    metadata:
      labels:
        app: counterrangerpcserverservice
    spec:
      containers:
      - name: counterrangerpcserverservice
        image: d3akhtar/counterrangerpcserver
---
apiVersion: v1
kind: Service
metadata:
  name: counterrangerpcserverservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: counterrangerpcserverservice
  ports:
  - name: counterrangerpcserverservice
    protocol: TCP
    port: 8080
    targetPort: 8080
