backend/K8/shorturl-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: shorturlnpservice-srv
spec:
  type: NodePort
  selector:
    app: shorturlservice
  ports:
    - name: shorturlservice
      protocol: TCP
      port: 8080
      targetPort: 8080
