backend/K8/usershorturl-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: usershorturlnpservice-srv
spec:
  type: NodePort
  selector:
    app: usershorturlservice
  ports:
    - name: usershorturlservice
      protocol: TCP
      port: 8080
      targetPort: 8080
