backend/K8/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-reges: 'true'
spec:
  rules:
    - host: shorturl.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-clusterip-srv
                port:
                  number: 8080
          - path: /api/shorturl
            pathType: Prefix
            backend:
              service:
                name: shorturl-clusterip-srv
                port:
                  number: 8080
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: usershorturl-clusterip-srv
                port:
                  number: 8080
